force-app/main/default/objects/Pipeline_Review_Historical_Data__c/Pipeline_Review_Historical_Data__c.object-meta.xml
<CustomObject>
    <description>Analytic snapshot of historical pipeline review data.  Report: https://na33.salesforce.com/00O70000002hqzU</description>
    <label>AS US Pipe Review History</label>
    <nameField>
        <displayFormat>PRH-{YYYY}-{00}</displayFormat>
        <label>Pipeline Review Historical Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AS US Pipe Review Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>