force-app/main/default/objects/Pipeline_Review_Historical_Data__c/fields/of_Direct_Reports__c.field-meta.xml
<CustomField>
    <fullName>of_Direct_Reports__c</fullName>
    <label># of Direct Reports as of This Month</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>