force-app/main/default/objects/Pipeline_Review_Historical_Data__c/fields/of_Pipeline_Reviews_Created__c.field-meta.xml
<CustomField>
    <fullName>of_Pipeline_Reviews_Created__c</fullName>
    <label># Pipeline Revs Created This Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>