force-app/main/default/objects/Pipeline_Review_Historical_Data__c/fields/Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Completed__c</fullName>
    <inlineHelpText>Pipeline reviews must have been created this month to be included.</inlineHelpText>
    <label>% Completed (# Reports/# Created)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>